; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_params_test.c_cleanup_object.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_params_test.c_cleanup_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_st = type { %struct.object_st*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @cleanup_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup_object(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.object_st*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.object_st*
  store %struct.object_st* %5, %struct.object_st** %3, align 8
  %6 = load %struct.object_st*, %struct.object_st** %3, align 8
  %7 = getelementptr inbounds %struct.object_st, %struct.object_st* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @BN_free(i32* %8)
  %10 = load %struct.object_st*, %struct.object_st** %3, align 8
  %11 = getelementptr inbounds %struct.object_st, %struct.object_st* %10, i32 0, i32 1
  store i32* null, i32** %11, align 8
  %12 = load %struct.object_st*, %struct.object_st** %3, align 8
  %13 = getelementptr inbounds %struct.object_st, %struct.object_st* %12, i32 0, i32 0
  %14 = load %struct.object_st*, %struct.object_st** %13, align 8
  %15 = call i32 @OPENSSL_free(%struct.object_st* %14)
  %16 = load %struct.object_st*, %struct.object_st** %3, align 8
  %17 = getelementptr inbounds %struct.object_st, %struct.object_st* %16, i32 0, i32 0
  store %struct.object_st* null, %struct.object_st** %17, align 8
  %18 = load %struct.object_st*, %struct.object_st** %3, align 8
  %19 = call i32 @OPENSSL_free(%struct.object_st* %18)
  ret void
}

declare dso_local i32 @BN_free(i32*) #1

declare dso_local i32 @OPENSSL_free(%struct.object_st*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
